# pycli2

./: .gitignore  pyproject.toml  setup.py
.github/workflows/: python-package.yml  python-pytest.yml
src/funcli/: __init__.py  __main__.py  _parser.py  app.py  parser.py
src/pycli2/: _parser.py
tests/funcli/: test_parser.py
tests/funcli/_parser/: test_get_argtype.py  test_get_types.py  test_parse_args.py  test_parse_func_args.py
tests/pycli2/_parser/: test_get_argtype.py  test_get_types.py  test_parse_func_args.py
