[project]
name = "funcli"
version = "0.1"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2,<3",
]

[project.optional-dependencies]
dev = [
    # Pytest
    "pytest",
    "pytest-asyncio",
    # Ruff
    "ruff",
    "pytest-ruff",
    # Mypy
    "mypy",
    "pytest-mypy",
]

[build-system]
requires = [
    "setuptools",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = [
    "py.typed",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--ruff",
    "--ruff-format",
    "--mypy",
]
log_level = "DEBUG"
filterwarnings = []

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "D2",
    "D3",
    "D4",
    "UP",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
plugins = []
disallow_untyped_defs = true
disallow_any_generics = true
enable_error_code = [
    "explicit-override",
    "truthy-bool",
    "possibly-undefined",
    "redundant-self",
    "unused-ignore",
]

[[tool.mypy.overrides]]
module = []
ignore_missing_imports = true
